# talent-manager-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/: tests.py  views.py
candidates/: models.py  serializers.py  urls.py  views.py
candidates/migrations/: 0001_initial.py  0002_alter_candidate_status.py
fixtures/: start.json
login/: serializers.py  tests.py  views.py
ping/: apps.py  tests.py  urls.py  views.py
talent_manager/: asgi.py  settings.py  urls.py  wsgi.py
