[project]
name = "talent-manager-backend"
version = "0.1.0"
description = "Talent Manager Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
]
